# EMHMM-Toolbox

./: README.md  emhmm_toolbox_v3.ipynb
EMHMM-Toolbox/: pyproject.toml
EMHMM-Toolbox/demo/: demo_faces.py  demo_faces_jov_clustering.py  demo_faces_jov_compare.py  demo_faces_jov_duration.py
EMHMM-Toolbox/emhmm_toolbox/: read_xls_fixations.py
EMHMM-Toolbox/emhmm_toolbox/demo/: demo_faces.py
EMHMM-Toolbox/emhmm_toolbox/src/hmm/: vbhmm_auto_hyperparam.py  vbhmm_fb.py  vbhmm_init.py  vbhmm_kld.py  vbhmm_permute.py  vbhmm_standardize.py
EMHMM-Toolbox/emhmm_toolbox/src/util/: read_xls_fixations.py
EMHMM-Toolbox/emhmm_v2/: pyproject.toml
EMHMM-Toolbox/emhmm_v2/src/emhmm_v2/gmm/: gmm_ll.py
EMHMM-Toolbox/emhmm_v2/src/emhmm_v2/hmm/: vbhmm_em.py  vbhmm_ll.py  vbhmm_plot_compact.py
EMHMM-Toolbox/emhmm_v2/src/emhmm_v2/stats/: stats_ttest.py
EMHMM-Toolbox/tests/: __init__.py
SMAC_HMM_ToolboxV2 2/: Plot_HMM_Coutrot.m
SMAC_HMM_ToolboxV2 2/emhmm-toolbox/src/plots/: plot_fixations.m  plot_transprob.m
emhmm_v2/: pyproject.toml
emhmm_v2/src/demo/: demo_faces.py
emhmm_v2/src/emhmm_v2/gmm/: gmm_learn.py
emhmm_v2/src/emhmm_v2/hmm/: vbhmm_em.py  vbhmm_learn.py  vbhmm_plot.py
emhmm_v2/src/emhmm_v2/util/: read_xls_fixations.py
