[tool.poetry]
name = "emhmm-toolbox"
version = "0.1.0"
description = ""
authors = ["marcoincerti <marco.incerti@studenti.unimi.it>"]
readme = "README.md"
packages = [{include = "emhmm_toolbox"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.2"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
