[tool.poetry]
name = "emhmm-v2"
version = "0.1.0"
description = ""
authors = ["marcoincerti <marco.incerti@studenti.unimi.it>"]
readme = "README.md"
packages = [{include = "emhmm_v2", from = "src"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
xlrd = "^2.0.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
