[tool.poetry]
name = "emhmm-v2"
version = "0.1.0"
description = ""
authors = ["marcoincerti <marco.incerti@studenti.unimi.it>"]
readme = "README.md"
packages = [{include = "emhmm_v2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
